Update README and add some keywords

--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
   },
   "keywords": [
     "react",
-    "react-component"
+    "react-component",
+    "font",
+    "picker",
+    "material",
+    "material-ui",
+    "design"
   ]
 }
