--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-font-picker",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "react-font-picker",
   "main": "lib/ReactFontPicker.js",
   "author": "Andreas Urbanski",
   "homepage": "https://github.com/andreasur/react-font-picker",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/andreasur/react-font-picker.git"
@@ -21,12 +22,12 @@
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
     "gulp": "^3.9.0",
-    "react": "^15.4.0",
+    "react": "^15.4.2",
     "react-component-gulp-tasks": "^0.7.6",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.2"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^15.4.2"
   },
   "browserify-shim": {
     "react": "global:React"
